# deepstream-app-custom

./: .clangd  .gitignore  .gitmodules  AGENTS.md  C-UAV_PROTOCOL.md  CLAUDE.md  README.md  convert2trt.sh  docker-compose.yml  push.sh  recv_multicast.py  send_pcapng_with_scapy.py  send_udp_json.py  start_app.sh  start_both_apps.sh  start_ir_app.sh  start_rgb_app.sh  start_rgb_drm_app.sh  start_service.sh  start_triton_server.sh  test_classify_onnx.py  test_command.mqtt  test_triton.py  test_video_triton.py
apps-common/includes/: deepstream_config.h  deepstream_config_file_parser.h  deepstream_config_yaml.h  deepstream_cuav_control.h  deepstream_osd.h  deepstream_sinks.h  deepstream_sources.h  deepstream_tracker.h  deepstream_udpjsonmeta.h  deepstream_udpmulticast.h  deepstream_videorecognition.h
apps-common/src/: deepstream_config_file_parser.c  deepstream_sink_bin.c  deepstream_source_bin.c  deepstream_videorecognition.c
apps-common/src/deepstream-yaml/: deepstream_cuav_control_yaml.cpp  deepstream_osd_yaml.cpp  deepstream_sink_yaml.cpp  deepstream_source_yaml.cpp  deepstream_tracker_yaml.cpp  deepstream_udpjsonmeta_yaml.cpp  deepstream_videorecognition_yaml.cpp
docs/: cuav-auto-track-runtime-guide.md  cuav-control-design.md
docs/superpowers/plans/: 2026-03-12-smart-record-sliding-window.md  2026-04-22-cuav-visible-control-plan.md
docs/superpowers/specs/: 2026-03-11-smart-record-detection-trigger-design.md  2026-03-12-gpio-alarm-sink-design.md  2026-03-12-smart-record-sliding-window-design.md  2026-04-22-cuav-visible-control-design.md
src/Mixformer_plugin/: .gitignore  CMakeLists.txt
src/Mixformer_plugin/includes/: Tracker.h  baseTrack_trt.h  deepTracker.h  mixformer_trt.h  mixformerv2_trt.h  ostrack_trt.h  suTrack_trt.h
src/Mixformer_plugin/models/: convert2trt.sh
src/Mixformer_plugin/src/: NvMOTContext.cpp  Tracker.cpp  baseTrack_trt.cpp  deepTracker.cpp  mixformer_trt.cpp  mixformerv2_trt.cpp  ostrack_trt.cpp  suTrack_trt.cpp
src/deepstream-app/: CMakeLists.txt  Makefile  compile_commands.json  deepstream-app  deepstream_app.c  deepstream_app.h  deepstream_app_callbacks.c  deepstream_app_callbacks.h  deepstream_app_config_parser.c  deepstream_app_config_parser_yaml.cpp  deepstream_app_main.c  deepstream_app_probes.c  deepstream_app_probes.h
src/deepstream-app/configs/: cfg_mqtt.txt  classify_labels copy.txt  classify_labels.txt  cls_labels.txt  config_infer_primary_yoloV11.txt  config_infer_primary_yoloV11_ir.txt  config_infer_primary_yoloV11_night.txt  config_infer_primary_yoloV11_rgb.txt  config_infer_primary_yoloV8.txt  config_infer_secondary_classify.txt  config_infer_secondary_ir_classify.txt  config_infer_secondary_plan_engine.txt  config_infer_secondary_rgb_classify.txt  config_infer_triton_yolov11.txt  config_preprocess.txt  config_preprocess_ir_primary.txt  config_preprocess_ir_sgie.txt  config_preprocess_multifreams_sgie.txt  config_preprocess_rgb_352_primary.txt  config_preprocess_rgb_primary.txt  config_preprocess_rgb_sgie.txt  config_preprocess_sgie.txt  config_sot.yml  debug_rgb_app_config.txt  deepstream_app_config.txt  dstest5_msgconv_sample_config.txt  ir_app_config.txt  labels.txt  night_app_config.txt  rgb_app_config.txt  save_images_app.txt
src/deepstream-app/configs/triton/: config_infer_plan_engine_primary.txt  config_infer_secondary_plan_engine.txt  config_infer_secondary_plan_engine_preprocess.txt
src/deepstream-app/configs/unused/: config_infer_secondary_ir_classify.txt  dstest5_msgconv_sample_config.txt
src/deepstream-app/configs/yml/: app_config.real_device_test.yml  app_config.yml  config_infer_primary_yoloV11_rgb.yml  config_infer_primary_yolo_352_rgb.yml  config_infer_primary_yolo_640_rgb.yml  config_infer_primary_yolo_rgb.yml  cuav_control_sink.yml  debug_sources.csv  file_sources.csv  perf-measurement.yml  sources.csv
src/deepstream-app/models/: convert2trt.sh  video_inference_trt.py
src/gst-mynetwork/: CMakeLists.txt  Makefile  gstmynetwork.cpp  gstmynetwork.h
src/nvdspreprocess_lib/: Makefile  config_preprocess_video_classification.txt  nvdspreprocess_lib.cpp  nvdspreprocess_lib.h
src/nvmsgconv/: Makefile
src/nvmsgconv/deepstream_schema/: deepstream_schema.cpp  eventmsg_payload.cpp
systemd/: deepstream-app-rgb-drm.service
systemd/user/: deepstream-app-rgb.service
triton_model/Primary_Detect/: config.pbtxt  labels.txt
triton_model/Secondary_Classify/: config.pbtxt
triton_model/Secondary_VehicleTypes/: config.pbtxt
triton_model/Tracking/: config.pbtxt
triton_model/Video_Classify/: config.pbtxt  labels.txt
